[tool.poetry]
name = "vector-databases"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pypdf = "^4.2.0"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.7"
ruff = "^0.5.1"
langchain = "^0.2.7"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
docarray = "^0.40.0"
langchain-pinecone = "^0.1.1"
pydantic = "^2.8.2"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
